fix: remove vuetify scrollbar

--- a/src/main.sass
+++ b/src/main.sass
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100..900&display=swap')
 
+$vertical-padding: 2rem
+
 @mixin big-shoulders()
     font-family: "Big Shoulders Text", sans-serif
     font-optical-sizing: auto
     font-style: normal
-
-html
-    &::-webkit-scrollbar
-        display: none
